--- a/TodoGui/Components/Pages/Home.razor
+++ b/TodoGui/Components/Pages/Home.razor
@@ -3,12 +3,14 @@
 @using System.Text.Json.Serialization
 @using TodoGui.Models
 @using TodoGetAll
+@using TodoGetSingle
 @inject IHttpClientFactory ClientFactory
 
 <PageTitle>Home</PageTitle>
 
 <h1>Todo List from external API</h1>
 
+<TodoGetSingle />
 <TodoGetAll />
 
 @code{
