Moved ApiRequestComponents to Components folder

--- a/TodoGui/Components/ApiRequestComponents/TodoGetAll.razor
+++ b/TodoGui/Components/ApiRequestComponents/TodoGetAll.razor
@@ -1,9 +1,9 @@
-﻿@namespace TodoGetAll
+﻿@namespace ApiRequestComponents.TodoGetAll
 @inject IHttpClientFactory ClientFactory
 @using System.Text.Json
 @using System.Text.Json.Serialization
 @using TodoGui.Models
-@using SingleTodo
+@using MyComponents.SingleTodo
 
 @if (todos is not null)
 {    
