--- a/TodoGui/Components/MyComponents/SingleTodo.razor
+++ b/TodoGui/Components/MyComponents/SingleTodo.razor
@@ -1,4 +1,4 @@
-﻿@namespace SingleTodo
+﻿@namespace MyComponents.SingleTodo
 
 <div class="single-todo-component">
     <div class="label-container">
