--- a/TodoGui/Components/Pages/Home.razor
+++ b/TodoGui/Components/Pages/Home.razor
@@ -4,14 +4,13 @@
 @using System.Text.Json.Serialization
 @using TodoGui.Models
 @using ApiRequestComponents.TodoGetAll
-@using ApiRequestComponents.TodoGetSearchResult
 @inject IHttpClientFactory ClientFactory
 
 <PageTitle>Home</PageTitle>
 
 <h1>Todo List from external API</h1>
 
-<TodoGetSearchResult />
+@* <TodoGetSearchResult /> *@
 <TodoGetAll />
 
 @code{
