Trying to keep search bar in the same box as the todos. Unfinished

--- a/TodoGui/Components/Pages/Home.razor
+++ b/TodoGui/Components/Pages/Home.razor
@@ -9,8 +9,9 @@
 <PageTitle>Home</PageTitle>
 
 <h1>Todo List from external API</h1>
-
-<TodoGetAll />
+<div class="home-todo-container">
+    <TodoGetAll />
+</div>
 
 @code{
 }
