--- a/TodoGui/Resources/Styles/SingleTodo.scss
+++ b/TodoGui/Resources/Styles/SingleTodo.scss
@@ -12,9 +12,9 @@ ul {
 }
 
 .single-todo-component {
-    display: flex;
-    justify-content: space-between;
-    width: 25%;
+    //display: flex;
+    //justify-content: space-between;
+    //width: 25%;
 }
 
 .label-container {
