--- a/TodoGui/Resources/Styles/Home.scss
+++ b/TodoGui/Resources/Styles/Home.scss
@@ -4,7 +4,7 @@
 @import "../../node_modules/bootstrap/scss/mixins";
 
 .home-todo-container {
-    display: flex;
-    justify-content: space-between;
+    //display: flex;
+    //justify-content: space-between;
     width: 25%;
 }
