--- a/TodoGui/Components/Pages/Home.razor
+++ b/TodoGui/Components/Pages/Home.razor
@@ -4,12 +4,14 @@
 @using System.Text.Json.Serialization
 @using TodoGui.Models
 @using ApiRequestComponents.TodoGetAll
+@using ApiRequestComponents.TodoPost
 @inject IHttpClientFactory ClientFactory
 
 <PageTitle>Home</PageTitle>
 
 <h1>Todo List from external API</h1>
 <div class="home-todo-container">
+    <TodoPost />
     <TodoGetAll />
 </div>
 
