Working with bootstrap to allow post modal to work.

--- a/TodoGui/Components/ApiRequestComponents/TodoPost.razor
+++ b/TodoGui/Components/ApiRequestComponents/TodoPost.razor
@@ -12,18 +12,18 @@
 
 <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#NewTodoModal">Add New</button>
 
-<div id="NewTodoModal" class="modal">
+<div id="NewTodoModal" class="modal fade" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <h1 class="modal-title">Add a New Todo Item</h1>
-                <button type="button" class="btn btn-close" data-bs-dismiss="modal" data-bs-target="#NewTodoModal"></button>
+                <button type="button" class="btn btn-close" data-bs-dismiss="modal"></button>
             </div>
             <div class="modal-body">
-
+                <p>hello</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal" data-bs-target="#NewTodoModal">Close</button>
+                <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Close</button>
                 <button type="button" class="btn btn-outline-primary">Save Todo</button>
             </div>
         </div>
