Finished the base requirements for TodoPost

--- a/TodoGui/Components/ApiRequestComponents/TodoPost.razor
+++ b/TodoGui/Components/ApiRequestComponents/TodoPost.razor
@@ -25,7 +25,7 @@
                     <input type="text" class="form-control post-input" placeholder="Todo Title..." @bind="title"/>
                 </div>
                 <div class="input-group p-1">
-                    <textarea type="text" class="form-control post-input" placeholder="Extra Details..." style="resize: none" rows="2" @bind="description" @bind:event="oninput"/>
+                    <textarea type="text" class="form-control post-input" placeholder="Extra Details..." style="resize: none" rows="2" @bind="description"/>
                 </div>
                 <div class="input-group p-1">
                     <input type="text" class="form-control post-input" placeholder="Whose task?..." @bind="owner"/>
@@ -33,15 +33,56 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-outline-primary">Save Todo</button>
+                <button type="button" class="btn btn-outline-primary" @onclick="() => SaveTodo()">Save Todo</button>
             </div>
         </div>
     </div>
 </div>
+
+<Toasts class="p-3" Messages="messages" Placement="ToastsPlacement.BottomLeft" />
 
 @code {
     private string? title = "";
     private string? description = "";
     private string? owner = "";
 
+    List<ToastMessage> messages = new List<ToastMessage>();
+
+    private void ShowMessage(ToastType toastType) => messages.Add(CreateToastMessage(toastType));
+
+    private ToastMessage CreateToastMessage(ToastType toastType)
+    => new ToastMessage
+        {
+            Type = toastType,
+            Title = "Successfully Sent Todo",
+            Message = "Todo Item Sent!"
+        };
+
+    private async Task SaveTodo()
+    {
+        var newTodo = new Todo
+            {
+                Title = title,
+                Description = description,
+                TodoOwner = owner,
+                isCompleted = false
+            };
+        await createItemAsync(newTodo);
+    }
+
+    public async Task createItemAsync(Todo todo)
+    {
+        var client = ClientFactory.CreateClient();
+        var request = new HttpRequestMessage(HttpMethod.Post, "https://localhost:7262/api/todo")
+            {
+                Content = new StringContent(JsonSerializer.Serialize(todo), System.Text.Encoding.UTF8, "application/json")
+            };
+
+        var response = await client.SendAsync(request);
+
+        if (response.IsSuccessStatusCode)
+        {
+            ShowMessage(ToastType.Success);
+        }
+    }
 }
