--- a/TodoGui/Components/ApiRequestComponents/TodoGetAll.razor
+++ b/TodoGui/Components/ApiRequestComponents/TodoGetAll.razor
@@ -10,7 +10,7 @@
 @using System.Linq
 @using MyComponents.SingleTodo
 
-<div class="input-group">
+<div class="input-group pt-3 pb-3">
     <input type="text" class="form-control" placeholder="Search Todo Titles" @bind="searchInput" @bind:event="oninput" />
 </div>
 @if (searchInput != null && searchInput != "")
