--- a/TodoGui/Components/ApiRequestComponents/TodoPost.razor
+++ b/TodoGui/Components/ApiRequestComponents/TodoPost.razor
@@ -1,6 +1,7 @@
 ﻿@namespace ApiRequestComponents.TodoPost
 @inject IHttpClientFactory ClientFactory
 @rendermode InteractiveServer
+@using ApiRequestComponents.TodoGetAll
 @using TodoGui.Models
 @using System.Text.Json
 @using System.Text.Json.Serialization
@@ -33,7 +34,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-outline-primary" @onclick="() => SaveTodo()">Save Todo</button>
+                <button type="button" class="btn btn-outline-primary" data-bs-dismiss="modal" @onclick="() => SaveTodo()">Save Todo</button>
             </div>
         </div>
     </div>
@@ -45,6 +46,8 @@
     private string? title = "";
     private string? description = "";
     private string? owner = "";
+    // private bool shouldRender;
+    // protected override bool ShouldRender() => shouldRender;
 
     List<ToastMessage> messages = new List<ToastMessage>();
 
@@ -83,6 +86,10 @@
         if (response.IsSuccessStatusCode)
         {
             ShowMessage(ToastType.Success);
+            title = "";
+            description = "";
+            owner = "";
+            StateHasChanged();
         }
     }
 }
