--- a/TodoGui/Components/ApiRequestComponents/TodoGetAll.razor
+++ b/TodoGui/Components/ApiRequestComponents/TodoGetAll.razor
@@ -9,10 +9,21 @@
 @using System
 @using System.Linq
 @using MyComponents.SingleTodo
+@using ApiRequestComponents.TodoPost
 
-<div class="input-group pt-3 pb-3">
-    <input type="text" class="form-control" placeholder="Search Todo Titles" @bind="searchInput" @bind:event="oninput" />
+<div class="container">
+    <div class="row">
+        <div class="col-10">
+            <div class="input-group pt-3 pb-3">
+                <input type="text" class="form-control" placeholder="Search Todo Titles" @bind="searchInput" @bind:event="oninput" />
+            </div>
+        </div>
+        <div class="col-2">
+            <TodoPost OnSubmit="HandleSubmit"/>
+        </div>
+    </div>
 </div>
+
 @if (searchInput != null && searchInput != "")
 {
     foreach (var todo in todos.Where(i => i.Title.Contains(searchInput)).OrderBy(i => i.Id))
@@ -73,5 +84,26 @@
             return ("N/A");
         }
         return description;
+    }
+
+    private async void HandleSubmit()
+    {
+        var request = new HttpRequestMessage(HttpMethod.Get, "https://localhost:7262/api/todo");
+        request.Headers.Add("Accept", "application/json");
+
+        var client = ClientFactory.CreateClient();
+
+        var response = await client.SendAsync(request);
+
+        if (response.IsSuccessStatusCode)
+        {
+            using var responseStream = await response.Content.ReadAsStreamAsync();
+            var options = new JsonSerializerOptions { PropertyNameCaseInsensitive = true };
+            todos = await JsonSerializer.DeserializeAsync<IEnumerable<Todo>>(responseStream, options);
+        }
+        else
+        {
+            getTodosError = true;
+        }
     }
 }
