--- a/TodoGui/Components/ApiRequestComponents/TodoPost.razor
+++ b/TodoGui/Components/ApiRequestComponents/TodoPost.razor
@@ -34,7 +34,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-outline-primary" data-bs-dismiss="modal" @onclick="() => SaveTodo()">Save Todo</button>
+                <button type="button" class="btn btn-outline-primary" data-bs-dismiss="modal" @onclick="async() => {await SaveTodo();}">Save Todo</button>
             </div>
         </div>
     </div>
@@ -43,6 +43,8 @@
 <Toasts class="p-3" Messages="messages" Placement="ToastsPlacement.BottomLeft" />
 
 @code {
+    [Parameter] 
+    public EventCallback OnSubmit { get; set; }
     private string? title = "";
     private string? description = "";
     private string? owner = "";
@@ -89,6 +91,7 @@
             title = "";
             description = "";
             owner = "";
+            await OnSubmit.InvokeAsync();
         }
     }
 }
