--- a/TodoGui/Components/ApiRequestComponents/TodoPost.razor
+++ b/TodoGui/Components/ApiRequestComponents/TodoPost.razor
@@ -34,7 +34,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-outline-primary" data-bs-dismiss="modal" @onclick="async() => {await SaveTodo();}">Save Todo</button>
+                <button type="button" class="btn btn-outline-primary" data-bs-dismiss="modal" @onclick="SaveTodo">Save Todo</button>
             </div>
         </div>
     </div>
