Got a weird bug where all my items are displayed properly, but my delete modal always gets the info of the lowest id?

--- a/TodoGui/Components/ApiRequestComponents/TodoDelete.razor
+++ b/TodoGui/Components/ApiRequestComponents/TodoDelete.razor
@@ -15,37 +15,52 @@
                 <button type="button" class="btn btn-close" data-bs-dismiss="modal"></button>
             </div>
             <div class="modal-body">
-                <SingleTodo Id="@Todo.Id"
-                            Title="@Todo.Title"
-                            TodoOwner="@Todo.TodoOwner"
-                            Description="@Description(Todo.Description)"
-                            isCompleted="@Todo.isCompleted" />
-                <h3>(This is super mega permanent)</h3>
+                <SingleTodo Id="@todoId"
+                            Title="@todo.Title"
+                            TodoOwner="@todo.TodoOwner"
+                            Description="@Description(todo.Description)"
+                            isCompleted="@todo.isCompleted" />
+                <p>@todoId</p>
+                <h4>(This is super mega permanent)</h4>
             </div>
             <div class="modal-footer">
                 <button class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button class="btn btn-outline-danger" data-bs-dismiss="modal" @onclick="async() => await DeleteItemAsync(id)">Delete</button>
+                <button class="btn btn-outline-danger" data-bs-dismiss="modal" @onclick="async() => await DeleteItemAsync(todo.Id)">Delete</button>
             </div>
         </div>
     </div>
 </div>
 
+<Toasts class="p-3" Messages="messages" AutoHide="true" Delay="5000" Placement="ToastsPlacement.BottomLeft" />
+
 @code {
     [Parameter] public EventCallback OnDelete { get; set; }
-    [Parameter] public int id { get; set; }
-    [Parameter] public Todo? Todo { get; set; }
+    [Parameter] public int todoId { get; set; }
+    [Parameter] public Todo? todo { get; set; }
 
-    public async Task DeleteItemAsync(int id)
+    List<ToastMessage> messages = new List<ToastMessage>();
+
+    private void ShowMessage() => messages.Add(CreateToastMessage());
+
+    private ToastMessage CreateToastMessage()
+    => new ToastMessage
+        {
+            Type = ToastType.Success,
+            Title = "Successfully Deleted todo Item!",
+            Message = "That item got beefed"
+        };
+
+    public async Task DeleteItemAsync(int todoId)
     {
         var client = ClientFactory.CreateClient();
-        var request = new HttpRequestMessage(HttpMethod.Delete, $"https://localhost:7262/api/todo/{id}");
+        var request = new HttpRequestMessage(HttpMethod.Delete, $"https://localhost:7262/api/todo/{todoId}");
 
         var response = await client.SendAsync(request);
 
         if(response.IsSuccessStatusCode)
         {
-            //Display toast message
             await OnDelete.InvokeAsync();
+            ShowMessage();
         }
     }
 
