--- a/TodoGui/Components/ApiRequestComponents/TodoGetAll.razor
+++ b/TodoGui/Components/ApiRequestComponents/TodoGetAll.razor
@@ -30,31 +30,33 @@
     foreach (var todo in todos.Where(i => i.Title.ToLower().Contains(searchInput.ToLower())).OrderBy(i => i.Id))
     {
         <div class="">
+            <p>@todo.Id</p>
             <SingleTodo Id="@todo.Id"
                         Title="@todo.Title"
                         TodoOwner="@todo.TodoOwner"
                         Description="@Description(todo.Description)"
                         isCompleted="@todo.isCompleted" />
-            <TodoDelete id="todo.Id" OnDelete="HandleChange" Todo="todo" />
+            <TodoDelete todoId="todo.Id" OnDelete="HandleChange" todo="todo" />
         </div>
     }
-    if (todos.Where(i => i.Title.Contains(searchInput)).Count() == 0)
+    if (todos.Where(i => i.Title.ToLower().Contains(searchInput.ToLower())).Count() == 0)
     {
         <h2>No Search Results :/</h2>
     }
-}
-
-@if (todos is not null && searchInput == "")
+} 
+else
 {    
     foreach(var todo in todos)
     {
         <div class="">
+            <p>@todo.Id</p>
             <SingleTodo Id="@todo.Id"
                         Title="@todo.Title"
                         TodoOwner="@todo.TodoOwner"
                         Description="@Description(todo.Description)"
                         isCompleted="@todo.isCompleted" />
-            <TodoDelete id="todo.Id" OnDelete="HandleChange" Todo="todo"/>
+            <TodoDelete todoId="todo.Id" OnDelete="HandleChange" todo="todo" />
+            <p>@todo.Title</p>
         </div>
     }
 }
