--- a/TodoGui/Components/ApiRequestComponents/TodoGetAll.razor
+++ b/TodoGui/Components/ApiRequestComponents/TodoGetAll.razor
@@ -29,7 +29,7 @@
 {
     foreach (var todo in todos.Where(i => i.Title.ToLower().Contains(searchInput.ToLower())).OrderBy(i => i.Id))
     {
-        <div class="">
+        <div class="single-todo-container">
             <SingleTodo Id="@todo.Id"
                         Title="@todo.Title"
                         TodoOwner="@todo.TodoOwner"
@@ -47,7 +47,7 @@ else
 {    
     foreach(var todo in todos)
     {
-        <div class="">
+        <div class="single-todo-container">
             <SingleTodo Id="@todo.Id"
                         Title="@todo.Title"
                         TodoOwner="@todo.TodoOwner"
