--- a/TodoGui/Resources/Styles/TodoGetAll.scss
+++ b/TodoGui/Resources/Styles/TodoGetAll.scss
@@ -5,4 +5,19 @@
 
 .single-todo-container {
     border: 1px solid black;
+    border-radius: 15px;
+    padding: 1rem;
+    margin-top: 1rem;
+    display: flex;
+}
+
+.single-todo {
+    display: flex;
+    justify-content: space-between;
+}
+
+.delete-button {
+    display: flex;
+    align-self: end;
+    justify-self: end;
 }
