--- a/TodoGui/Components/ApiRequestComponents/TodoGetAll.razor
+++ b/TodoGui/Components/ApiRequestComponents/TodoGetAll.razor
@@ -30,12 +30,23 @@
     foreach (var todo in todos.Where(i => i.Title.ToLower().Contains(searchInput.ToLower())).OrderBy(i => i.Id))
     {
         <div class="single-todo-container">
-            <SingleTodo Id="@todo.Id"
-                        Title="@todo.Title"
-                        TodoOwner="@todo.TodoOwner"
-                        Description="@Description(todo.Description)"
-                        isCompleted="@todo.isCompleted" />
-            <TodoDelete todoId="@todo.Id" OnDelete="HandleChange" todo="@todo" />
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <SingleTodo Id="@todo.Id"
+                                    Title="@todo.Title"
+                                    TodoOwner="@todo.TodoOwner"
+                                    Description="@Description(todo.Description)"
+                                    isCompleted="@todo.isCompleted" />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-9"></div>
+                    <div class="col">
+                        <TodoDelete todoId="@todo.Id" OnDelete="HandleChange" todo="@todo" />
+                    </div>
+                </div>
+            </div>
         </div>
     }
     if (todos.Where(i => i.Title.ToLower().Contains(searchInput.ToLower())).Count() == 0)
@@ -48,12 +59,23 @@ else
     foreach(var todo in todos)
     {
         <div class="single-todo-container">
-            <SingleTodo Id="@todo.Id"
-                        Title="@todo.Title"
-                        TodoOwner="@todo.TodoOwner"
-                        Description="@Description(todo.Description)"
-                        isCompleted="@todo.isCompleted" />
-            <TodoDelete todoId="@todo.Id" OnDelete="HandleChange" todo="@todo" />
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <SingleTodo Id="@todo.Id"
+                                    Title="@todo.Title"
+                                    TodoOwner="@todo.TodoOwner"
+                                    Description="@Description(todo.Description)"
+                                    isCompleted="@todo.isCompleted" />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-9"></div>
+                    <div class="col">
+                        <TodoDelete todoId="@todo.Id" OnDelete="HandleChange" todo="@todo" />
+                    </div>
+                </div>
+            </div>
         </div>
     }
 }
