Centered the whole home page

--- a/TodoGui/Resources/Styles/TodoGetAll.scss
+++ b/TodoGui/Resources/Styles/TodoGetAll.scss
@@ -6,7 +6,7 @@
 .single-todo-container {
     border: 1px solid black;
     border-radius: 15px;
-    padding: 1rem;
+    padding: .5rem;
     margin-top: 1rem;
     display: flex;
 }
