--- a/TodoGui/Components/ApiRequestComponents/TodoGetAll.razor
+++ b/TodoGui/Components/ApiRequestComponents/TodoGetAll.razor
@@ -41,8 +41,8 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-9"></div>
-                    <div class="col">
+                    <div class="col-6"></div>
+                    <div class="col-6">
                         <TodoDelete todoId="@todo.Id" OnDelete="HandleChange" todo="@todo" />
                     </div>
                 </div>
