--- a/TodoGui/Components/Pages/Home.razor
+++ b/TodoGui/Components/Pages/Home.razor
@@ -9,9 +9,14 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Todo List from external API</h1>
-<div class="home-todo-container">
-    <TodoGetAll />
+<div class="home-todo-container container">
+    <div class="row">
+        <div class="col-2"></div>
+        <div class="col-8">
+            <TodoGetAll />
+        </div>
+        <div class="col-2"></div>
+    </div>
 </div>
 
 @code{
