--- a/TodoGui/Components/ApiRequestComponents/TodoGetAll.razor
+++ b/TodoGui/Components/ApiRequestComponents/TodoGetAll.razor
@@ -29,7 +29,7 @@
 {
     foreach (var todo in todos.Where(i => i.Title.ToLower().Contains(searchInput.ToLower())).OrderBy(i => i.Id))
     {
-        <div class="single-todo-container">
+        <div class="single-todo-container" @onclick="() => {}">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
@@ -42,7 +42,7 @@
                 </div>
                 <div class="row">
                     <div class="col-6"></div>
-                    <div class="col-6">
+                    <div class="col-6 delete-button-container">
                         <TodoDelete todoId="@todo.Id" OnDelete="HandleChange" todo="@todo" />
                     </div>
                 </div>
@@ -58,7 +58,7 @@ else
 {    
     foreach(var todo in todos)
     {
-        <div class="single-todo-container">
+        <div class="single-todo-container" @onclick="() => {}">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
@@ -70,8 +70,8 @@ else
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-9"></div>
-                    <div class="col">
+                    <div class="col-6"></div>
+                    <div class="col-6 delete-button-container">
                         <TodoDelete todoId="@todo.Id" OnDelete="HandleChange" todo="@todo" />
                     </div>
                 </div>
