--- a/TodoGui/Components/ApiRequestComponents/TodoGetAll.razor.css
+++ b/TodoGui/Components/ApiRequestComponents/TodoGetAll.razor.css
@@ -1,9 +1,14 @@
 .single-todo-container {
-  border: 1px solid black;
+  border: 2px solid black;
   border-radius: 15px;
   padding: 0.5rem;
   margin-top: 1rem;
   display: flex;
+}
+
+.single-todo-container:hover {
+  border: 4px solid blue;
+  cursor: pointer;
 }
 
 .single-todo {
@@ -11,10 +16,9 @@
   justify-content: space-between;
 }
 
-.delete-button {
+.delete-button-container {
   display: flex;
-  align-self: end;
-  justify-self: end;
+  justify-content: end;
 }
 
 /*# sourceMappingURL=TodoGetAll.razor.css.map */
