--- a/TodoGui/Resources/Styles/TodoGetAll.scss
+++ b/TodoGui/Resources/Styles/TodoGetAll.scss
@@ -4,11 +4,16 @@
 @import "../../node_modules/bootstrap/scss/mixins";
 
 .single-todo-container {
-    border: 1px solid black;
+    border: 2px solid black;
     border-radius: 15px;
     padding: .5rem;
     margin-top: 1rem;
     display: flex;
+}
+
+.single-todo-container:hover {
+    border: 4px solid blue;
+    cursor: pointer;
 }
 
 .single-todo {
@@ -16,8 +21,7 @@
     justify-content: space-between;
 }
 
-.delete-button {
+.delete-button-container {
     display: flex;
-    align-self: end;
-    justify-self: end;
+    justify-content: end;
 }
